--- a/src/main/resources/assets/blur/lang/sv_se.json
+++ b/src/main/resources/assets/blur/lang/sv_se.json
@@ -1,9 +1,9 @@
 {
   "blur.midnightconfig.title": "Blur Config",
   "blur.midnightconfig.blurExclusions": "Undantag till Blur",
-  "blur.midnightconfig.fadeTimeMillis": "Blurtid (i millisekunder)",
+  "blur.midnightconfig.fadeTimeMillis": "Toningstid (i millisekunder)",
   "blur.midnightconfig.radius": "Radie",
-  "blur.midnightconfig.gradientStartColor": "Gradientens Startfärg",
-  "blur.midnightconfig.gradientEndColor": "Gradientens Slutfärg",
+  "blur.midnightconfig.gradientStartColor": "Toningsfärg (start)",
+  "blur.midnightconfig.gradientEndColor": "Toningsfärg (slut)",
   "blur.midnightconfig.showScreenTitle": "Visa skärmtitel"
 }
